# Calmify

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  .gitmodules  AAA_VAD_IMPLEMENTATION_PLAN.md  ADVANCED_AUDIO_INTELLIGENCE_REPORT.md  AMICA_ARCHITECTURE.md  AMICA_EXPLORATION_COMPLETE.txt  ANIMATION_EXPANSION_PLAN.md  ARCHITECTURE_MAP.md  AVATAR_CHAT_INTEGRATION_GUIDE.md  CALMIFY_SUCCESS_STORY.md  CLAUDE.md  CONSOLIDATION_SUMMARY.md  FEATURE_IMPROVEMENT_ANALYSIS.md  FINAL_AEC_SOLUTION.md  FIREBASE_MIGRATION_STATUS.md  GARDEN_VIEW_PLAN.md  GEMINI_HUMANOID_INTEGRATION.md  GEMINI_LIVE_AVATAR_INTEGRATION_PLAN.md  HOLISTIC_GROWTH_PLAN.md  HOME_REDESIGN_MASTERPLAN.md  HOME_REDESIGN_PLAN.md  I18N_GUIDE.md  IMPLEMENTATION_GUIDE.md  ISTRUZIONI.md  JARVIS_SUCCESS_LOG.md  KMP_NEXT_WEEK_PLAN.md  KMP_REFACTOR_MASTERPLAN.md  LIVE_AUDIO_ARCHITECTURE_ANALYSIS.md  NEXUS_INTEGRATION_MASTERPLAN.md  OLD_FILES.txt  PRODUCTION_READY_PLAN.md  PROJECT_TECHNICAL_REPORT.md  PSYCHOLOGICAL_INSIGHTS_PLAN.md  REFERENCES.MD  SMOKE_TEST_COWORK.md  SOCIAL_FEATURES_DOCUMENTATION.md  UI_OVERHAUL_PLAN.md  (+12 more)
.claude/: ARCHITECTURE_OVERVIEW.md  BACKEND_AI_SERVER.md  BACKEND_AUDIT.md  BACKEND_KTOR_SERVER.md  BACKEND_PROTOBUF.md  BACKEND_SYNC_ENGINE.md  BIOSIGNAL_INTEGRATION_PLAN.md  BIOSIGNAL_INTEGRATION_STATUS.md  BIOSIGNAL_PHASE_9_PLAN.md  KMP_STATUS.md  (+18 more)
features/chat/src/main/cpp/: AudioBridge.cpp  AudioBridge.h  CMakeLists.txt  OboePlaybackEngine.cpp  OboePlaybackEngine.h  OboeRecordingEngine.cpp  OboeRecordingEngine.h  RingBuffer.h  SoftwareAecProcessor.cpp  SoftwareAecProcessor.h  jni_bridge.cpp
(+1399 files in other folders)
